--- a/yamls/http3-server.yaml
+++ b/yamls/http3-server.yaml
@@ -1,29 +1,33 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: http3-client
+  name: http3-server
   namespace: http3-test
   labels:
-    app.kubernetes.io/name: http3-client
+    app.kubernetes.io/name: http3-server
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: http3-client
+      app.kubernetes.io/name: http3-server
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: http3-client
+        app.kubernetes.io/name: http3-server
     spec:
       containers:
-      - name: http3-client
+      - name: http3-server
         image: http3-tools
         imagePullPolicy: Never
         command: ["/opt/scripts/setup.sh"]
         args: ["--server"]
         ports:
         - containerPort: 4433
-          name: http3-listen
+          name: http3-server
+          protocol: UDP
+        - containerPort: 4444
+          name: netcat-test
+          protocol: UDP
         livenessProbe:
           exec:
             command: ["/bin/bash","-c","ps -ef | grep [p]ython"]
@@ -33,15 +37,20 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: http3-client
+  name: http3-server
   namespace: http3-test
   labels:
-    app.kubernetes.io/name: http3-client
+    app.kubernetes.io/name: http3-server
 spec:
   selector:
-    app.kubernetes.io/name: http3-client
+    app.kubernetes.io/name: http3-server
   ports:
-    - protocol: UDP
+    - name: http3
+      protocol: UDP
       port: 4433
-      targetPort: http3-listen
+      targetPort: http3-server
+    - name: netcat
+      protocol: UDP
+      port: 4444
+      targetPort: netcat-test
 
