--- a/traefik-test/traefik-deployment-sidecar.yaml
+++ b/traefik-test/traefik-deployment-sidecar.yaml
@@ -1,51 +1,4 @@
----
-# Source: traefik/templates/rbac/clusterrolebinding.yaml
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: traefik-http3-test
-  labels:
-    app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-http3-test
-    helm.sh/chart: traefik-26.0.0
-    app.kubernetes.io/managed-by: Helm
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: traefik-http3-test
-subjects:
-  - kind: ServiceAccount
-    name: traefik
-    namespace: http3-test
----
-# Source: traefik/templates/service.yaml
-apiVersion: v1
-kind: Service
-metadata:
-  name: traefik
-  namespace: http3-test
-  labels:
-    app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-http3-test
-    helm.sh/chart: traefik-26.0.0
-    app.kubernetes.io/managed-by: Helm
-  annotations:
-spec:
-  type: LoadBalancer
-  selector:
-    app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-http3-test
-  ports:
-  - port: 80
-    name: "web"
-    targetPort: web
-    protocol: TCP
-  - port: 443
-    name: "websecure"
-    targetPort: websecure
-    protocol: TCP
----
-# Source: traefik/templates/deployment.yaml
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -123,12 +76,6 @@ spec:
         - name: "websecure"
           containerPort: 8443
           protocol: "TCP"
-        securityContext:
-          allowPrivilegeEscalation: false
-          capabilities:
-            drop:
-            - ALL
-          readOnlyRootFilesystem: true
         volumeMounts:
           - name: data
             mountPath: /data
@@ -158,54 +105,18 @@ spec:
               fieldRef:
                 fieldPath: metadata.namespace
       - name: tcpdumpsidecar
-      
+        image: http3-tools
+        imagePullPolicy: Never
+        ports:
+        - containerPort: 5432
+        command: ["/bin/bash", "-ec", "apt-get update && apt-get install sudo; sudo apt-get install tcpdump -y; while :; do echo '.'; sleep 5 ; done"]
       volumes:
         - name: data
           emptyDir: {}
         - name: tmp
           emptyDir: {}
-      securityContext:
-        fsGroupChangePolicy: OnRootMismatch
-        runAsGroup: 65532
-        runAsNonRoot: true
-        runAsUser: 65532
----
-# Source: traefik/templates/ingressclass.yaml
-apiVersion: networking.k8s.io/v1
-kind: IngressClass
-metadata:
-  annotations:
-    ingressclass.kubernetes.io/is-default-class: "true"
-  labels:
-    app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-http3-test
-    helm.sh/chart: traefik-26.0.0
-    app.kubernetes.io/managed-by: Helm
-  name: traefik
-spec:
-  controller: traefik.io/ingress-controller
----
-# Source: traefik/templates/dashboard-ingressroute.yaml
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
-metadata:
-  name: traefik-dashboard
-  namespace: http3-test
-  annotations:
-  labels:
-    app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-http3-test
-    helm.sh/chart: traefik-26.0.0
-    app.kubernetes.io/managed-by: Helm
-spec:
-  entryPoints:
-  - traefik
-  routes:
-  - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
-    kind: Rule
-    services:
-    - name: api@internal
-      kind: TraefikService
-
-NOTES:
-Traefik Proxy v2.10.6 has been deployed successfully on http3-test namespace !
+      # securityContext:
+      #   fsGroupChangePolicy: OnRootMismatch
+      #   runAsGroup: 65532
+      #   runAsNonRoot: true
+      #   runAsUser: 65532
